@@ -188,359 +188,6 @@ JoinThread::join(const PartialBeliefStatePackagePtr& partial_eqs,
 
 
 
-void
-JoinThread::wait_dmcs(size_t& path,
-		      std::size_t& pack_size)
-{
-    // wait for a notification from StreamingDMCS
-    ConflictNotification* cn = 0;
-    void *ptr         = static_cast<void*>(&cn);
-    unsigned int p    = 0;
-    std::size_t recvd = 0;
-    
-    DMCS_LOG_TRACE(port << ": Listen to dmcs...");
-    //    dmcs_joiner_notif->receive(ptr, sizeof(cn), recvd, p);
-	
-    if (!ptr || !cn)
-      {
-	DMCS_LOG_FATAL("Got null message: " << ptr << " " << cn);
-	assert(ptr != 0 && cn != 0);
-      }
-
-    path = cn->path;
-    pack_size = cn->pack_size;
-    DMCS_LOG_TRACE(port << ": Got a notification from dmcs: " << *cn);
-
-    delete cn;
-    cn = 0;
-}
-
-
-
-
-void
-JoinThread::request_neighbor(PartialBeliefStatePackage* partial_eqs,
-			     std::size_t nid, std::size_t pack_size,
-			     std::size_t& path,
-			     BaseNotification::NotificationType nt)
-{
-  if (partial_eqs)
-    {
-      // empty our local storage for the sake of non-exponential space
-      PartialBeliefStateVecPtr& bsv = (*partial_eqs)[nid];
-      for (PartialBeliefStateVec::iterator it = bsv->begin(); it != bsv->end(); ++it)
-	{
-	  assert (*it);
-	  delete *it;
-	  *it = 0;
-	}
-      
-      bsv->clear();
-    }
-
-  ConflictNotification* cn;
-  cn = new ConflictNotification(nt, path, session_id, pack_size, ConflictNotification::FROM_JOINER);
-
-  ConcurrentMessageQueuePtr& cmq = (*joiner_neighbors_notif)[nid];
-  
-  ConflictNotification* ow_neighbor = (ConflictNotification*) overwrite_send(cmq.get(), &cn, sizeof(cn), 0);
-  
-  if (ow_neighbor)
-    {
-      delete ow_neighbor;
-      ow_neighbor = 0;
-    }
-}
-
-
-
-void
-JoinThread::import_belief_states(std::size_t noff,
-				 std::size_t peq_cnt, 
-				 PartialBeliefStatePackagePtr& partial_eqs, 
-				 bm::bvector<>& in_mask,
-				 bm::bvector<>& pack_full,
-				 PartialBeliefStateIteratorVecPtr& beg_it, 
-				 PartialBeliefStateIteratorVecPtr& mid_it,
-				 std::size_t& request_size,
-				 ImportStates import_state)
-{
-  assert (request_size != 0 && peq_cnt <= request_size);
-
-  std::size_t no_imported = 0;
-  const std::size_t offset = ConcurrentMessageQueueFactory::NEIGHBOR_MQ + noff;
-
-  // read BeliefState* from NEIGHBOR_MQ
-  PartialBeliefStateVecPtr& bsv = (*partial_eqs)[noff];
-  std::size_t mark_prev_end = 0;
-
-  if (import_state == FILLING_UP)
-    {
-      mark_prev_end = bsv->size();
-    }
-
-  for (std::size_t i = 0; i < peq_cnt; ++i)
-    {
-      std::size_t prio = 0;
-      int timeout = 0;
-
-      struct MessagingGatewayBC::ModelSession ms = mg->recvModel(offset, prio, timeout);
-      PartialBeliefState* bs = ms.m;
-      std::size_t sid = ms.sid;
-
-      assert (bs);
-
-      DMCS_LOG_TRACE(port << ": Got bs = " << *bs << ". sid = " << sid);
-      // normal case, just got a belief state
-      if (sid == session_id)
-	{
-	  DMCS_LOG_TRACE(port << ": Storing belief state " << i << " from " << noff);
-	  bsv->push_back(bs);
-	  no_imported++;
-	}
-      else
-	{
-	  DMCS_LOG_TRACE(port << ": Ignore this belief state because it belongs to an old session");
-	}
-
-    }
-
-
-  if (import_state != FILLING_UP)
-    {
-      (*beg_it)[noff] = bsv->begin();
-    }
-  else
-    {
-      PartialBeliefStateVec::const_iterator& mid_it_ref = (*mid_it)[noff];
-      mid_it_ref = bsv->begin();
-      std::advance(mid_it_ref, mark_prev_end);
-    }
-
-  if (no_imported > 0)
-    {
-      // turn on the bit that is respective to this context
-      in_mask.set(noff);
-      request_size -= no_imported;
-
-      if (request_size == 0)
-	{
-	  pack_full.set(noff);
-	}
-    }
-}
-
-
-
-
-void
-JoinThread::import_and_join(VecSizeTPtr request_size, 
-			    std::size_t& path,
-			    std::size_t pack_size)
-{
-  DMCS_LOG_DEBUG(__PRETTY_FUNCTION__);
-  
-  ImportStates import_state = START_UP;
-
-  bool asking_next = false;
-
-  std::size_t next_neighbor_offset = 0;
-
-  bm::bvector<> in_mask;
-  bm::bvector<> pack_full;
-
-  // set up a package of empty BeliefStates
-  PartialBeliefStatePackagePtr partial_eqs(new PartialBeliefStatePackage);
-  for (std::size_t i = 0; i < no_nbs; ++i)
-    {
-      PartialBeliefStateVecPtr bsv(new PartialBeliefStateVec);
-      partial_eqs->push_back(bsv);
-    }
-
-  PartialBeliefStateIteratorVecPtr beg_it(new PartialBeliefStateIteratorVec(no_nbs));
-  PartialBeliefStateIteratorVecPtr mid_it(new PartialBeliefStateIteratorVec(no_nbs));
-
-  while (1)
-    {
-      std::size_t prio = 0;
-      int timeout = 0;
-	  
-      // notification from neighbor thread
-	  
-      DMCS_LOG_TRACE(port << ": Waiting at JOIN_IN for notification of NEW MODELS ARRIVAL");
-	  
-      MessagingGatewayBC::JoinIn nn = 
-	mg->recvJoinIn(ConcurrentMessageQueueFactory::JOIN_IN_MQ, prio, timeout);
-	  
-      DMCS_LOG_TRACE(port << ": Received from offset " << nn.ctx_offset << ", " << nn.peq_cnt << " peqs to pick up.");
-
-      if (nn.peq_cnt == 0)
-	{
-	  // This neighbor is either out of models or UNSAT
-	  if (import_state == START_UP)
-	    {
-	      std::size_t& current_request_size = (*request_size)[nn.ctx_offset];
-	      if (current_request_size == pack_size)
-		{
-		  // UNSAT
-		  // Inform the SAT solver about this by sending him a
-		  // NULL model.
-		  DMCS_LOG_TRACE(port << ": import_state is STARTUP and peq=0. Send a NULL model to JOIN_OUT_MQ");
-
-		  mg->sendModel(0, 0, 0, 0, ConcurrentMessageQueueFactory::JOIN_OUT_MQ, 0);
-		  
-		  ///@todo: Also tell the neighbors (via NeighborOut) to stop
-		  /// returning models.
-		}
-	      else
-		{
-		  current_request_size = 0;
-		  pack_full.set(nn.ctx_offset);
-		}
-	    }
-	  else
-	    {
-	      // out of models, import == GETTING_NEXT v FILLING_UP
-	      
-	      // We need to ask the next neighbor (now ordered by the
-	      // offset) to give the next package of models.
-	      
-	      next_neighbor_offset = nn.ctx_offset + 1;
-	      
-	      DMCS_LOG_TRACE(port << ": Increase next_neighbor_offset. Now is: " << next_neighbor_offset);
-	      
-	      if (next_neighbor_offset == no_nbs)
-		{
-		  DMCS_LOG_TRACE(port << ": Send a NULL model to JOIN_OUT_MQ");
-
-		  mg->sendModel(0, 0, 0, 0, ConcurrentMessageQueueFactory::JOIN_OUT_MQ, 0);
-		  return;
-		}
-	      else
-		{
-		  DMCS_LOG_TRACE(port << ": Going to ask for next batch of peqs with next_neighbor_offset == " << next_neighbor_offset);
-		  asking_next = true;
-		  (*request_size)[next_neighbor_offset] = pack_size;
-		  request_neighbor(partial_eqs.get(), next_neighbor_offset, pack_size, path, BaseNotification::NEXT);
-		}
-	    }
-	} // if (nn.peq_cnt == 0)
-      else // (nn.peq_cnt != 0)
-	{
-	  std::size_t& current_request_size = (*request_size)[nn.ctx_offset];
-	  import_belief_states(nn.ctx_offset,
-			       nn.peq_cnt,
-			       partial_eqs, 
-			       in_mask,
-			       pack_full,
-			       beg_it,
-			       mid_it,
-			       current_request_size,
-			       import_state);
-	  
-	  DMCS_LOG_TRACE(port << ": PartialBeliefState package received:");
-	  DMCS_LOG_TRACE(*partial_eqs);
-
-	  // then if this was a "NEXT" request to this neighbor, we
-	  // have to restart the neighbors before him
-	  if (asking_next)
-	    {
-	      DMCS_LOG_TRACE(port << ": Realized that we are in GETTING_NEXT mode.");
-	      
-	      assert (import_state != START_UP);
-	      assert (nn.ctx_offset == next_neighbor_offset);
-	      
-	      asking_next  = false;
-	      import_state = START_UP;
-	      
-	      for (std::size_t i = 0; i < next_neighbor_offset; ++i)
-		{
-		  // actually it's asking for a new round of models 
-		  (*request_size)[i] = pack_size;
-		  request_neighbor(partial_eqs.get(), i, pack_size, path, BaseNotification::REQUEST);
-		  
-		  // and reset the in bit mask wrt this neighbor
-		  in_mask.set(i, false);
-		  
-		  // further possible improvement: if neighbor at
-		  // offset i has in total less than pack_size models,
-		  // then we just keep his models as asking for a new
-		  // round will return the same thing.
-		}
-	    }
-
-	  if (current_request_size > 0)
-	    {
-	      request_neighbor(0, nn.ctx_offset, current_request_size, path, BaseNotification::NEXT);
-	    }
-
-	  // At this point, we can check whether joining is possible
-	  if (in_mask.count_range(0, no_nbs+1) == no_nbs)
-	    {
-	      if (import_state == START_UP || import_state == GETTING_NEXT)
-		{
-		  import_state = FILLING_UP;
-		  
-		  DMCS_LOG_TRACE(port << ": First time joining");
-		  
-		  for (std::size_t i = 0; i < no_nbs; ++i)
-		    {
-		      PartialBeliefStateVecPtr& bsv = (*partial_eqs)[i];
-		      (*mid_it)[i] = bsv->end();
-		    }
-		  
-		  join(partial_eqs, beg_it, mid_it);
-		}
-	      else
-		{
-		  DMCS_LOG_TRACE(port << ":  NOT a first time joining ==> do it selectively");
-		  for (std::size_t i = 0; i < no_nbs; ++i)
-		    {
-		      PartialBeliefStateVecPtr& bsv = (*partial_eqs)[i];
-		      PartialBeliefStateVec::const_iterator& mid_it_ref = (*mid_it)[i];
-		      if (mid_it_ref != bsv->end())
-			{
-			  // This neighbor has some new models.
-			  DMCS_LOG_DEBUG("Neighbor at offset " << i << " has some new models.");
-			  PartialBeliefStateVec::const_iterator& beg_it_ref = (*beg_it)[i];
-			  
-			  // This is the range of new models that we want to join.
-			  
-			  DMCS_LOG_DEBUG("mid_it = " << **mid_it_ref);
-			  
-			  beg_it_ref = mid_it_ref;
-			  mid_it_ref = bsv->end();
-			  
-			  join(partial_eqs, beg_it, mid_it);
-			  
-			  // Restart begin position, because the new models are now all in.
-			  beg_it_ref = bsv->begin();
-			}
-		    }
-		}
-	      
-	      DMCS_LOG_TRACE(port << ": pack_full.count_range == " << pack_full.count_range(0, no_nbs+1));
-	      
-	      if (pack_full.count_range(0, no_nbs+1) == no_nbs)
-		{
-		  DMCS_LOG_TRACE(port << ":  Pack full, go to get next models");
-		  import_state = GETTING_NEXT;
-		  asking_next  = true;
-		  
-		  // always ask for next models from neighbor with offset 0
-		  next_neighbor_offset = 0;
-		  (*request_size)[0] = pack_size;
-		  request_neighbor(partial_eqs.get(), 0, pack_size, path, BaseNotification::NEXT);
-		}
-
-	    } // (in_mask.count_range(0, no_nbs+1) == no_nbs)
-	  
-	} // (nn.peq_cnt != 0)
-
-    } // while (1)
-}
-
-
 
 void
 JoinThread::reset(bool& first_round,
@@ -615,8 +262,17 @@ JoinThread::operator()(std::size_t nbs,
       AskNextNotification* sat_trigger = mg->recvNotification(ConcurrentMessageQueueFactory::SAT_JOINER_MQ, prio, timeout);
 
       DMCS_LOG_TRACE("Got a trigger from SAT. AskNextNotification = " << *sat_trigger);
+
+      BaseNotification::NotificationType nt = sat_trigger->type;
+      std::size_t path = sat_trigger->path;
+      std::size_t session_id = sat_trigger->session_id;
+      std::size_t k1 = sat_trigger->k1;
+      std::size_t k2 = sat_trigger->k2;
+
+      delete sat_trigger;
+      sat_trigger = 0;
       
-      if (sat_trigger->type == BaseNotification::NEXT)
+      if (nt == BaseNotification::NEXT)
 	{
 	  if (joined_results->size() > 0)
 	    {
@@ -633,16 +289,13 @@ JoinThread::operator()(std::size_t nbs,
 	    {
 	      DMCS_LOG_TRACE("joined_results is empty, call process() now. first_round = " << first_round);
 	      first_result = true;
-	      std::size_t path = sat_trigger->path;
-	      std::size_t session_id = sat_trigger->session_id;
-	      std::size_t k1 = sat_trigger->k1;
-	      std::size_t k2 = sat_trigger->k2;
+
 	      process(path, session_id, k1, k2, first_round, asking_next, next_neighbor_offset, pack_count, partial_eqs);
 	    }
 	}
       else
 	{
-	  assert (sat_trigger->type == BaseNotification::SHUTUP);
+	  assert (nt == BaseNotification::SHUTUP);
 	  DMCS_LOG_TRACE("In SHUTUP mode, reset all data members");
 
 	  reset(first_round, asking_next,
@@ -653,31 +306,6 @@ JoinThread::operator()(std::size_t nbs,
 	  DMCS_LOG_TRACE("After reset. first_round = " << first_round);
 	}
     }
-
-  /*
-#ifdef DEBUG
-  History path;
-#else
-  std::size_t path;
-#endif
-
-  VecSizeTPtr request_size(new VecSizeT(no_nbs, 0));
-
-  std::size_t pack_size;
-  while (1)
-    {
-      // Trigger from dmcs
-      wait_dmcs(path, pack_size);
-
-      // First action: notify all neighbors to return me pack_size models (via NeighborOut)
-      for (std::size_t i = 0; i < no_nbs; ++i)
-	{
-	  (*request_size)[i] = pack_size;
-	  request_neighbor(0, i, pack_size, path, BaseNotification::REQUEST);
-	}
-
-      import_and_join(request_size, path, pack_size);
-      }*/
 }
 
 
