@@ -1,3 +1,8 @@
+2011-03-31  Minh Dao Tran  <dao@kr.tuwien.ac.at>
+
+	* include/network/JoinThread.h: Clean up and fix memory leaks.
+	* src/network/JoinThread.cpp: Likewise.
+
 2011-03-30  Minh Dao Tran  <dao@kr.tuwien.ac.at>
 
 	* include/network/JoinThread.h: Fix corner case: all joins are
